Changelog for miniShop.

1.8.2 (**.**.2012)
- Добавлен вывод родительских категорий у настройки мультикатегорий товара в админке
-----
- Added displaying parent categories for multi-categories setting in goods manager

1.8.1 (17.07.2012)
=============
- Исправлена работа с процессорами личного кабинета
-----
- Fixed work with private office processors

1.8.0 (16.07.2012)
=============
- Добавлены события для плагинов. Теперь можно писать плагины, реагирующие на создание\изменение заказа и его статуса
- Добавлен плагин miniShop. Выводит меню менеджеру на фронтенде и чистит таблицы от удаленных элементов при очищении корзины ресурсов.
- Удаление товара не удаляет его свойства. Они удаляются при очистке корзины, новым плагином.
- Процессоры переделаны для работы с $modx->runProcessor
-----
- Added events for plugins. Now you can make plugins, that will listen for events create\update of an order and its status change.
- Added plugin miniShop. Displaying menu for manager on frontend and clean tables on empty resources trash.
- Remove of product do not remove its properties. They are removed when you empty trash, by new plugin.
- Processors was improved for work with $modx->runProcessor

1.7.3 (02.07.2012)
=============
- Добавлена поддержка прямых ссылок на некоторые действия компонента (типа, /manager/?a=78&act=edit&item=15)
- Очередные улучшения UI админки
- Добавлен чанк tpl.msPayment.row
- Добавлено действие getMiniCart сниппету miniShop, для вывода миникорзины
- Добавлен чанк tpl.msCart.mini для миникорзины
- Изменен minishop.js для работы с миникорзиной
- [#51] Обновлен msGetResources до нового getResources 1.5.0- Очередные правки UI админки
-----
- Added support of direct links on some component actions (for example, /manager/?a=78&act=edit&item=15)
- Another UI improvements in manager
- Added chunk tpl.msPayment.row
- Added action getMiniCart for snippet miniShop.
- Added chunk tpl.msCart.mini for minicart templating
- Changed minishop.js for work with minicart