@@ -16,7 +16,11 @@ if (!$tv = $modx->getObject('modTemplateVarResource', array('tmplvarid' => $scri
 	$tv = $modx->newObject('modTemplateVarResource', array('tmplvarid' => $scriptProperties['id'], 'contentid' => $scriptProperties['resourceId']));
 }
 
+$modx->invokeEvent('msOnBeforeTVUpdate', array('tv' => $tv));
+
 $tv->set('value', $scriptProperties['value']);
-$tv->save();
+if ($tv->save()) {
+	$modx->invokeEvent('msOnTVUpdate', array('tv' => $tv));
+}
 
 return $modx->error->success('', $res);
