@@ -2,8 +2,10 @@ Changelog for miniShop.
 
 1.8.2 (**.**.2012)
 - Добавлен вывод родительских категорий у настройки мультикатегорий товара в админке
+- Добавлены события msOnBeforeTVUpdate и msOnTVUpdate
 -----
 - Added displaying parent categories for multi-categories setting in goods manager
+- Added events msOnBeforeTVUpdate and msOnTVUpdate
 
 1.8.1 (17.07.2012)
 =============
